# sntry

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: specification.md
src/: auth.rs  config.rs  http.rs  main.rs  output.rs  time.rs
src/commands/: auth.rs  config.rs  discover.rs  events.rs  issues.rs  mod.rs  orgs.rs  projects.rs  releases.rs  tail.rs
