[package]
name = "bcl-sntry"
version = "0.1.1"
edition = "2021"
description = "A fast, minimal CLI for investigating Sentry issues, events, and releases"
license = "MIT"
repository = "https://github.com/Battle-Creek-LLC/sntry"
readme = "README.md"
keywords = ["sentry", "cli", "issues", "observability", "errors"]
categories = ["command-line-utilities"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/sntry-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "sntry{ binary-ext }"

[[bin]]
name = "sntry"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dialoguer = { version = "0.11", default-features = false, features = ["password"] }
ctrlc = "3"
comfy-table = "7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
is-terminal = "0.4"
anyhow = "1"
url = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
